# socktard

./: CMakeLists.txt  README.md
include/: exceptions.hpp  socket.hpp  socktard.hpp  unix_socket.hpp  win_socket.hpp
src/: main.cpp  socktard.cpp  unix_socket.cpp  win_socket.cpp
